// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h3
  className="sc-bdvvtL kfVnPE sinoui-typography sinoui-typography--h3"
  color="textPrimary"
  type="h3"
>
  H3
</h3>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdvvtL kfVnPE sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h2>,
  <h3
    className="sc-bdvvtL OFmXE sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL iFiNOh sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL eaNfHQ sinoui-typography sinoui-typography--h3"
    color="success"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL kfOGSI sinoui-typography sinoui-typography--h3 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h3
    className="sc-bdvvtL kfVnPE sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL NrCBb sinoui-typography sinoui-typography--h3"
    color="primary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL bfHQPw sinoui-typography sinoui-typography--h3"
    color="secondary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL kfVnPE sinoui-typography sinoui-typography--h3"
    color="textPrimary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL ljeNUt sinoui-typography sinoui-typography--h3"
    color="textSecondary"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL kJFocd sinoui-typography sinoui-typography--h3"
    color="error"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL gVcgAY sinoui-typography sinoui-typography--h3"
    color="warning"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL eaNfHQ sinoui-typography sinoui-typography--h3"
    color="success"
    type="h3"
  >
    H3
  </h3>,
  <h3
    className="sc-bdvvtL fSkNVg sinoui-typography sinoui-typography--h3"
    color="info"
    type="h3"
  >
    H3
  </h3>,
]
`;
